[package]
name = "bitonic_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[lib]
name = "bitonic_sort"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false